# concov

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug-report-form.yml  config.yml
.github/workflows/: release-please.yml
src/: cfg.rs  convert.rs  format.rs  lib.rs
src/cobertura/: mod.rs  no_xml.rs  schema.rs  schema_loose.rs
src/cobertura/tests/: gen.rs  gen.xml
src/cobertura/tests/snapshots/: covcon__cobertura__tests__gen__gen_loose_read.snap  covcon__cobertura__tests__gen__gen_v4_read.snap  covcon__cobertura__tests__gen__xml_to_json.snap
