[package]
name = "covcon"
description = "Crate to convert between code coverage formats."
repository = "https://github.com/mhatzl/covcon"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = { version = "0.37.1", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = { version = "1.41.1", features = ["ron"] }
